force-app/main/default/objects/Timer__mdt/Timer__mdt.object-meta.xml
<CustomObject>
    <label>Timer</label>
    <pluralLabel>Timers</pluralLabel>
</CustomObject>