force-app/main/default/objects/Timer__mdt/fields/BusinessHoursName__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursName__c</fullName>
    <label>BusinessHoursName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>