force-app/main/default/objects/Timer__mdt/fields/end_date_field__c.field-meta.xml
<CustomField>
    <fullName>end_date_field__c</fullName>
    <label>end date field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>