force-app/main/default/objects/Timer__mdt/fields/Object_Api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_name__c</fullName>
    <label>Object Api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>