force-app/main/default/objects/Timer__mdt/fields/start_date_field__c.field-meta.xml
<CustomField>
    <fullName>start_date_field__c</fullName>
    <label>start date field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>